src/test/ui/regions/regions-escape-method.stderr
error[E0495]: cannot infer an appropriate lifetime due to conflicting requirements
  --> $DIR/regions-escape-method.rs:15:13
   |
LL |     s.f(|p| p)
   |             ^
   |
note: first, the lifetime cannot outlive the anonymous lifetime #2 defined on the body at 15:9...
  --> $DIR/regions-escape-method.rs:15:9
   |
LL |     s.f(|p| p)
   |         ^^^^^
   = note: ...so that the expression is assignable:
           expected &i32
              found &i32
note: but, the lifetime must be valid for the method call at 15:5...
  --> $DIR/regions-escape-method.rs:15:5
   |
LL |     s.f(|p| p)
   |     ^^^^^^^^^^
note: ...so that a type/lifetime parameter is in scope here
  --> $DIR/regions-escape-method.rs:15:5
   |
LL |     s.f(|p| p)
   |     ^^^^^^^^^^

error: aborting due to previous error

